--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dmstr/yii2-adminlte-asset",
+    "name": "tsaoko/yii2-adminlte-asset",
     "description": "Backend theme for Yii2 Framework",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","adminlte"],
@@ -12,18 +12,21 @@
         {
             "name": "Evgeniy Tkachenko",
             "email": "et.coder@gmail.com"
+        },
+        {
+            "name": "UUTAN",
+            "email": "uutan@qq.com"
         }
     ],
     "require": {
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap": "2.*",
-        "cebe/yii2-gravatar": "1.*",
-        "almasaeed2010/adminlte": "~2.0",
-        "rmrevin/yii2-fontawesome": "~2.9"
+        "tsaoko/adminlte": "~2.0",
+        "tsaoko/yii2-fontawesome": "~2.9"
     },
     "autoload": {
         "psr-4": {
-            "dmstr\\": ""
+            "tsaoko\\": ""
         }
     },
     "extra": {
